--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   <section id="vr" style="display: none;">
     <h2>Explora el modelo 3D del ojo</h2>
     <p>Haz clic en el botón para ver el modelo en 3D con lentes de realidad virtual.</p>
-    <a href="https://sketchfab.com/models/aae8f63f507b44d8915877d02f91bba5/embed?autostart=1&cardboard=1&internal=1&tracking=0&ui_ar=0&ui_infos=0&ui_snapshots=1&ui_stop=0&ui_theatre=1&ui_watermark=0" target="_blank"><button class="btn">Ver en VR</button></a>
+    <a href="https://sketchfab.com/3d-models/ojo-con-glaucoma-aae8f63f507b44d8915877d02f91bba5" target="_blank"><button class="btn">Ver en VR</button></a>
   </section>
 
   <script>
